--- a/static/css/gal.css
+++ b/static/css/gal.css
@@ -3,4 +3,10 @@ h4 {
 }
 .out_part {
   background-color: #d0d0d0;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.optimized {
+  color: #f00;
 }
