Minor text changes.

--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block title %}Page not found{% endblock %}
 
 {% block body %}
-<h1>Woosh! You just got an error 404!!</h1>
-<p>The page you were looking for was not
-found, most probably because it does not exist.</p>
+<h1>Error 404!!</h1>
+<p>The page you were looking for was not found (well, let's be
+honest about this, it was not found because it does not exist).</p>
 {% endblock %}
