--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@ function print_mail(text) {
 	<!--header -->
 	<div id="header">			
 				
-		<h1 id="logo-text"><a href="/" title="">Filion Lab</a></h1>		
+		<h1 id="logo-text"><a href="/" title="">the Filion lab</a></h1>		
 		<p id="intro">
 		Genome Architecture
 		</p>		
@@ -199,15 +199,15 @@ function print_mail(text) {
 			<h3>About</h3>			
 			
 			<p>
-      The four golden rules of our team are Freedom, Creativiy,
+      The golden rules of our team are Freedom, Creativiy,
       Team Spirit and Openness, because we believe that they are the
       pillars of Enthusiasm. And research without Enthusiasm is a little
-      bit like... well, it's just not nice.
+      bit like... well, it's just not cool.
       </p>
 
       <p>
-      If you care more about what we do, you can read more about our
-      <a href="/research-lines">research lines.</a>
+      If you want to know more about what we do, you can read more abouts
+      our <a href="/research-lines">research lines.</a>
       </p>
 
 			<p>
@@ -218,7 +218,7 @@ function print_mail(text) {
 
 			<p>
 				<a href="/index.html">Home</a> |
-				<a href="/sitemap.xml">Sitemap</a>
+				<a href="/sitemap.xml.gz">Sitemap</a>
 {#				<a href="/index.html">RSS Feed</a> |
                 <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
 		   	    <a href="http://validator.w3.org/check/referer">XHTML</a>
