--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@ function print_mail(text) {
 			<h3>Some links</h3>
 			<ul class="sidemenu">
 				<li><a href="http://blog.thegrandlocus.com/">The Grand Locus</a></li>
-				<li><a href="http://pasteur.crg.es/portal/page/portal/Internet/">Centre for Gene Regulation (CRG)</a></li>
+				<li><a href="http://pasteur.crg.es/portal/page/portal/Internet/">Centre for Genomic Regulation (CRG)</a></li>
 			</ul>
 
 {#			<h3>Search Box</h3>	
@@ -163,14 +163,14 @@ function print_mail(text) {
         </p>
 
 			<ul class="col-list">				
+                <li><a href="http://blog.thegrandlocus.com/2013/06/how-to-stop-sucking-and-be-awesome-instead">How to stop sucking... -
+                <span>The secret of a successful PhD.</span></a>
+                </li>
                 <li><a href="http://blog.thegrandlocus.com/2013/03/genetics-and-racism-3">Genetics and racism (3) -
                 <span>do human races exist?</span></a>
                 </li>
                 <li><a href="http://blog.thegrandlocus.com/2012/07/The-geometry-of-style">The geometry of style -
                 <span>how to make the best of IMDB reviews?</span></a>
-                </li>
-                <li><a href="http://blog.thegrandlocus.com/2013/03/one-shade-of-authorship-attribution">One shade of authorship attribution -
-                <span>How to identify the author of a text?</span></a>
                 </li>
 			</ul>
 
@@ -200,9 +200,9 @@ function print_mail(text) {
 			
 			<p>
       The golden rules of our team are Freedom, Creativiy,
-      Team Spirit and Openness, because we believe that they are the
-      pillars of Enthusiasm. And research without Enthusiasm is a little
-      bit like... well, it's just not cool.
+      Teamwork and Openness, because we believe that they are the
+      pillars of Enthusiasm. And research without Enthusiasm is
+      like... like... well, it's just not cool.
       </p>
 
       <p>
