Added multi-author blogging.

--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -16,6 +16,9 @@
     <label for="name">Title:</label>
     <input type="text" id="name" value="{{post.title}}" name="title" />
 
+    <label for="name">Author:</label>
+    <input type="text" id="name" value="{{post.author}}" name="author" />
+
     <label for="message">Body:</label>
     <textarea rows="10" cols="20" name="body"
       id="message">{{post.body}}</textarea>
