--- a/templates/listing.html
+++ b/templates/listing.html
@@ -4,8 +4,7 @@
 {% block description %}
     {% if generator_class == 'IndexContentGenerator' %}
     <meta name="description"
-        content="(by Guillaume Filion)" />
-    <link rel="author" href="https://plus.google.com/102441667247494916086" />
+        content="The Lab Notes | Genome Architecture blog." />
     {% else %}
     <meta name="description"
         content="Filion lab | Bioinformatics & Molecular Biology" />
@@ -22,8 +21,8 @@
 
   <span itemscope itemtype="http://data-vocabulary.org/Person">
   By <a class="url fn n grey_link"
-  href="https://plus.google.com/102441667247494916086?rel=author"><span
-  itemprop="name">Guillaume Filion</span></a></span> | Filed under  
+  href="{{ post.authref }}?rel=author"><span
+  itemprop="name">{{ post.author }}</span></a></span> | Filed under  
   {% for tag in post.tag_pairs %}{{
       macros.filed_under(tag, config.prefix_url)
   }}{% if not loop.last %},
@@ -78,7 +77,6 @@
 {% endblock %}
 
 {% block copyright %}
-<div style="float:right; clear:both; font-size:small;">Content &copy; 2014 <a rel="author" href="https://plus.google.com/102441667247494916086">Guillaume Filion</a>. All Rights Reserved blah blah.</div>
 {% endblock %}
 
 {% block footer %}
