--- a/templates/admin/edit.html
+++ b/templates/admin/edit.html
@@ -41,7 +41,10 @@
     <h3>Editing tips:</h3>
     <code>style="float:left; margin-right:20px;"</code>
     <h2 id="preview_title"></h2>
+
+    <span id="postbody">
     <div id="preview"></div>
+    </span>
 
     <br />
     <br />
