--- a/templates/listing.html
+++ b/templates/listing.html
@@ -29,9 +29,12 @@
   {% else %}.{% endif %}{% endfor %}
   <br/ >
   <br/ >
-  
   </p>
+
+  <span id="postbody">
   {{post.summary|safe}}
+  </span>
+
   <br />
 
   <div class="postmeta">
