Added css for python code.

--- a/static/css/FreshMedia.css
+++ b/static/css/FreshMedia.css
@@ -105,6 +105,7 @@ img.float-left {
   	margin: 5px 10px 10px 0px;
 }
 
+/*
 code {
   	margin: 5px 0;
   	padding: 15px;
@@ -112,10 +113,10 @@ code {
   	display: block;
   	overflow: auto;  
   	font: 500 1em/1.5em 'Lucida Console', 'courier new', monospace ;
-  	/* white-space: pre; */
   	border: 1px solid #ECF8FE;
 	background: #ECF8FE;  
 }
+*/
 acronym {
   cursor: help;
   border-bottom: 1px dotted #895F30;
