Added starcode page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -114,6 +114,7 @@ function print_mail(text) {
 				<li><a href="/">Home</a></li>
 				<li><a href="/work-with-us">Work with us</a></li>
 				<li><a href="/protocols/list">Protocols</a></li>
+				<li><a href="/starcode">Starcode</a></li>
 {#
   			<li><a href="/">Downloads</a></li>
 				<li><a href="/">Extras</a></li>
