--- a/static/css/FreshMedia.css
+++ b/static/css/FreshMedia.css
@@ -46,7 +46,7 @@ h1 {
 	font-size: 350%;	
 	font-weight: normal;
 	letter-spacing: -2px;
-	/*padding: 15px 10px 5px 10px;*/
+	padding: 15px 10px 5px 10px;
 	padding-bottom: 15px;
 	margin: 0;
   color: #0B9AC7;
@@ -54,14 +54,14 @@ h1 {
 h2 {
 	font-size: 200%;
 	color: #895F30;
-	/*padding: 20px 10px 5px 10px;*/
+	padding: 20px 10px 5px 10px;
 	padding-bottom: 10px;
 	margin: 0;
 }
 h3 {
 	font-size: 170%;	
 	font-weight: normal;
-	/*padding: 20px 10px 5px 10px;*/
+	padding: 20px 10px 5px 10px;
 	padding-top: 10px;
 	padding-bottom: 5px;
 	margin: 0;	
@@ -79,7 +79,7 @@ blockquote p { padding: 10px; margin; 0; }
 
 ul, ol {
 	margin: 0px;
-	padding: 0px;
+	/* padding: 0 0 0 10px; */
 	/* margin: 10px 20px; */
 	/* padding: 0 20px; */
 }
