Added stats exam 2014 with answers.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="/static/css/FreshMedia.css" type="text/css" />
 <link rel="stylesheet" href="/static/css/gal.css" type="text/css" />
 
-<title>{% block title %}Filion lab | Home{% endblock %}</title>
+<title>{% block title %}Home | Filion lab{% endblock %}</title>
 
 <script>
 function print_mail(text) {
