--- a/static/css/FreshMedia.css
+++ b/static/css/FreshMedia.css
@@ -46,25 +46,27 @@ h1 {
 	font-size: 350%;	
 	font-weight: normal;
 	letter-spacing: -2px;
-	padding: 15px 10px 5px 10px;
+	/*padding: 15px 10px 5px 10px;*/
+	/*padding-bottom: 15px;*/
 	padding-bottom: 15px;
-	margin: 0;
+	margin: 0px;
   color: #0B9AC7;
 }
 h2 {
 	font-size: 200%;
 	color: #895F30;
-	padding: 20px 10px 5px 10px;
-	padding-bottom: 10px;
-	margin: 0;
+	/*padding: 20px 10px 5px 10px;*/
+	/*margin: 0px;*/
+	margin-bottom: 10px;
 }
 h3 {
 	font-size: 170%;	
 	font-weight: normal;
-	padding: 20px 10px 5px 10px;
-	padding-top: 10px;
-	padding-bottom: 5px;
-	margin: 0;	
+	padding: 10px 0px 5px 0px;
+	/*padding: 20px 10px 5px 10px;*/
+	/*padding-top: 10px;*/
+	/*padding-bottom: 5px;*/
+	margin: 0px;	
 }
 h3:first-child {
   padding-top: 0px;
