Updated front page, put header on every page.

--- a/templates/listing.html
+++ b/templates/listing.html
@@ -17,7 +17,7 @@
   <p>The main theme of our research is to understand how gene regulation 
   and genome organization tie in with each other. The <strong>Lab
   Notes</strong> are the latest headlines from the lab, featuring a
-  collection of random thoughts and useful code snippet.</p>
+  collection of random thoughts and useful code snippets.</p>
 
   {% for post in posts %}
   <div id="post_summary_div">
@@ -87,89 +87,3 @@
 
 {% block copyright %}
 {% endblock %}
-
-{% block footer %}
-	<div id="footer-wrap"><div id="footer-content">
-	
-		<div class="col float-left space-sep">
-		
-			<h3>The Grand Locus</h3>
-
-        <p>
-        <a href="http://blog.thegrandlocus.com">The
-        Grand Locus</a> is the personal blog of Guillaume Filion.
-        It is about statistics, biology and the rest.
-        </p>
-
-        <p>
-        Most popular posts.
-        </p>
-
-			<ul class="col-list">				
-                <li><a href="http://blog.thegrandlocus.com/2013/06/how-to-stop-sucking-and-be-awesome-instead">How to stop sucking... -
-                <span>The secret of success.</span></a>
-                </li>
-                <li><a href="">A flurry of copycats on PubMed -
-                <span>How similar can scientific papers be?</span></a>
-                </li>
-                <li><a href="http://blog.thegrandlocus.com/2012/07/The-geometry-of-style">The geometry of style -
-                <span>How to analyze IMDB reviews?</span></a>
-                </li>
-			</ul>
-
-		</div>
-		
-		<div class="col float-left">
-		
-			<h3>The Lab Notes</h3>
-			
-			<p>
-      <a href="/labnotes">The Lab Notes</a> are about what is going
-      on in the team. They can be short technical notes, experimental
-      tips, conceptual manifestos, mini tutorials <i>etc</i>.
-			</p>
-
-      <p>
-      The Lab Notes is a great way for the team members to practice
-      their scientific writing skills, and a great way to share,
-      because after all that’s what we like.
-      </p>
-			
-		</div>		
-	
-		<div class="col2 float-right">
-		
-			<h3>About the lab</h3>			
-			
-			<p>
-      Our golden rules are Freedom, Creativiy,
-      Teamwork and Openness, because we believe that they are the
-      pillars of Enthusiasm. And research without Enthusiasm is
-      like... well, it’s just not cool.
-      </p>
-
-      <p>
-      If you want to know more about what we do, you can read more abouts
-      our <a href="/research-lines">research lines.</a>
-      </p>
-
-			<p>
-      <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">
-      &copy;</span> copyleft 2014 <strong>Filion Lab</strong><br /> 
-			<a href="http://www.bluewebtemplates.com/" title="Website Templates">website templates</a> by <a href="http://www.styleshout.com/">styleshout</a>
-         	</p><br />
-
-			<p>
-				<a href="/">Home</a> |
-				<a href="/sitemap.xml.gz">Sitemap</a>
-{#				<a href="/index.html">RSS Feed</a> |
-                <a href="http://jigsaw.w3.org/css-validator/check/referer">CSS</a> |
-		   	    <a href="http://validator.w3.org/check/referer">XHTML</a>
-#}
-			</p>
-			
-		</div>		
-			
-	</div></div>
-{% endblock %}
-
