Added Eduard, new picture of Pol, and changed the base template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,7 @@ function print_mail(text) {
 				<li id="home"><a href="/">Home</a></li>
 				<li id="people"><a href="/people">People</a></li>
 				<li id="research"><a href="/research-lines">Research</a></li>
+				<li id="work-with-us"><a href="/work-with-us">Work with us</a></li>
 				<li id="contact"><a href="/contact">Contact</a></li>		
 			</ul>		
 		</div>	
@@ -109,12 +110,15 @@ function print_mail(text) {
 		<!-- sidebar starts -->
 		<div id="sidebar">
 		
-			<h3>The laboratory</h3>
+			<h3>Software</h3>
 			<ul class="sidemenu">				
+{#
 				<li><a href="/">Home</a></li>
-				<li><a href="/work-with-us">Work with us</a></li>
 				<li><a href="/protocols/list">Protocols</a></li>
-				<li><a href="/starcode">Starcode</a></li>
+#}
+				<li><a href="https://github.com/ezorita/starcode">Starcode</a></li>
+				<li><a href="https://github.com/ezorita/seeq">Seeq</a></li>
+				<li><a href="https://github.com/nanakiksc/zerone">Zerone</a></li>
 {#
   			<li><a href="/">Downloads</a></li>
 				<li><a href="/">Extras</a></li>
