Updated people page and CV.

--- a/templates/base.html
+++ b/templates/base.html
@@ -116,7 +116,7 @@ function print_mail(text) {
 				<li><a href="/">Home</a></li>
 				<li><a href="/protocols/list">Protocols</a></li>
 #}
-				<li><a href="https://github.com/ezorita/starcode">Starcode</a></li>
+				<li><a href="https://github.com/gui11aume/starcode">Starcode</a></li>
 				<li><a href="https://github.com/ezorita/seeq">Seeq</a></li>
 				<li><a href="https://github.com/nanakiksc/zerone">Zerone</a></li>
 {#
